<resources>
    <string name="app_name">ESNBilbao</string>


    <string name="contact_form">Contact Us</string>
    <string name="contact_form_name">Your Name</string>
    <string name="contact_form_email">Your Email</string>
    <string name="contact_form_subject">Subject</string>
    <string name="contact_form_message">Message</string>
    <string name="contact_form_button">Send Message</string>
    <string name="contact_form_post_message">Please wait! We\'re sending your message to the support department…</string>
    <string name="contact_posted">Your message has been successfully delivered.</string>
    <string name="esncard">ESNcard</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="nombre">Nombre</string>
    <string name="ESN_TITLE">ERASMUN STUDENT NETWORK</string>
    <string name="contact_form_txt">Contact Form</string>
    <string name="desc_logo">Logo ESN</string>
    <string name="desc_log_imag">Profile image</string>
    <string name="esnbilbao_txt">ESNBILBAO</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="registro">Registro</string>
    <string name="password">Password</string>
    <string name="ya_tengo_cuenta">Ya tengo cuenta</string>

</resources>
