<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/cuadrado1"
        android:gravity=""
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <!--                android:src="@drawable/logoesn1"-->

        <EditText
            android:id="@+id/edit_text_contact_login_main"
            android:layout_width="98dp"
            android:layout_height="49dp"
            android:layout_marginTop="16dp"
            android:background="@color/transparent"
            android:drawablePadding="10dp"
            android:elevation="600dp"
            android:hint="@string/esncard"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView4"
            tools:layout_conversion_absoluteHeight="19dp"
            tools:layout_conversion_absoluteWidth="260dp"
            android:importantForAutofill="no" />

        <Button

            android:id="@+id/button_login_login_main_activity"
            android:layout_width="228dp"
            android:layout_height="30dp"
            android:layout_marginTop="21dp"
            android:background="@drawable/login_button"
            android:elevation="20dp"
            android:gravity="center"
            android:text="@string/login"
            android:textSize="14dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_text_contact_login_main"
            tools:layout_conversion_absoluteHeight="33dp"
            tools:layout_conversion_absoluteWidth="204dp" />

        <!--  android:text="|"
              android:textSize="35dp" -->

        <!--                android:src="@drawable/google" -->


        <!--        TEST     -->

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="282dp"
            android:layout_height="34dp"
            android:elevation="600dp"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:srcCompat="@drawable/letras"
            tools:layout_conversion_absoluteHeight="48dp"
            tools:layout_conversion_absoluteWidth="411dp" />

        <TextView
            android:id="@+id/text_view_login_sequerly"
            android:layout_width="wrap_content"
            android:layout_height="19dp"
            android:elevation="600dp"
            android:gravity="center"
            android:text="@string/ESN_TITLE"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView3"
            tools:layout_conversion_absoluteHeight="19dp"
            tools:layout_conversion_absoluteWidth="331dp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="82dp"
            android:layout_height="110dp"
            android:layout_marginTop="8dp"
            android:elevation="600dp"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/fotoesn"
            tools:layout_conversion_absoluteHeight="88dp"
            tools:layout_conversion_absoluteWidth="411dp" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="114dp"
            android:layout_height="153dp"
            android:layout_marginTop="112dp"
            android:elevation="600dp"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView3"
            app:srcCompat="@drawable/contacto"
            tools:layout_conversion_absoluteHeight="88dp"
            tools:layout_conversion_absoluteWidth="411dp" />

        <TextView
            android:id="@+id/text_view_forgotten_password_login_main_activity"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:layout_marginBottom="50dp"
            android:elevation="600dp"
            android:gravity="center"
            android:text="@string/contact_form_txt"
            android:textColor="@color/light_black"
            android:textSize="19sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_login_login_main_activity"
            tools:layout_conversion_absoluteHeight="26dp"
            tools:layout_conversion_absoluteWidth="411dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/image_view_close_login_activity_login_main"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>